# clipper

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  TASK.md  index.html  package-lock.json  package.json  tsconfig.test.json
.github/workflows/: ci.yml  release.yml
Casks/: clipper.rb
docs/: ARCHITECTURE.md  WINDOWS_PRD.md
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  lib.rs  main.rs  ocr.rs
src-tauri/src/capture/: macos.rs  mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/image_processing/: mod.rs
src-tauri/src/permissions/: macos.rs  mod.rs
src-tauri/src/window/: macos.rs  mod.rs
src/components/: AnnotationCanvas.tsx  CaptureOverlay.tsx  ColorPicker.tsx  FloatingToolbar.tsx  InlineCaptureToolbar.tsx  PermissionPanel.tsx  PinWindow.tsx  SaveDialog.tsx  SelectionHandles.tsx  SettingsPanel.tsx  Toast.tsx  Toolbar.tsx
src/hooks/: useAnnotation.ts  useCapture.ts
src/stores/: captureStore.ts
src/styles/: globals.css
src/utils/: canvas.ts  captureGeometry.ts
tests/: captureGeometry.test.mjs
